# dart-ffi-playground

./: .clang-format  .gitignore  README.md  bootstrap.sh  pubspec.yaml
lib/: dart_ffi_playground.dart
lib/hello/: CMakeLists.txt  build.sh  hello.cpp  hello.hpp  main.cpp
lib/src/bindings/: bindings.dart  signatures.dart  types.dart
lib/src/ffi/: cstring.dart
test/: dart_ffi_playground_test.dart
